--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
     <div class="section-title feedback-block__title tablet-hide desktop-hide">Давайте начнем воплощать <span>вашу мечту о ремонте со встречи?</span>
     </div>
     <div class="feedback-block__descr">Обсудите проект со специалистом или вызовите замерщика.</div>
-    <form class="feedback-block__form" id="feedback2"><label><span><sup>*</sup>Введите ваше имя:</span> <input
-        type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name" required=""
+    <form novalidate class="feedback-block__form" id="feedback2"><label><span><sup>*</sup>Введите ваше имя:</span> <input
+        type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name"
         maxlength="20"></label> <label><span><sup>*</sup>Введите ваш номер:</span> <input type="text"
                                                                                           class="feedback-block__form-input feedback-block__form-input_phone"
                                                                                           name="phone"
